<resources>
    <string name="app_name">ReaderDemo</string>
    <string name="app_version">v0.1.0.0</string>
    <string name="readCard">Read</string>
    <string name="cus_readCard">Cus</string>
    <string name="moisture">Moisture</string>
    <string name="ltu27">Ltu27</string>
    <string name="ltu31">Ltu31</string>
    <string name="stop">Stop</string>
    <string name="clean">Clean</string>
    <string name="index">index</string>
    <string name="type">type</string>
    <string name="moisture_title">Moisture</string>
    <string name="tid">TID</string>
    <string name="epc">EPC</string>
    <string name="epcData">EpcBand</string>
    <string name="rssi">RSSI</string>
    <string name="userData">UserData</string>
    <string name="reserveData">ReserveData</string>
    <string name="Ant1">Ant1</string>
    <string name="Ant2">Ant2</string>
    <string name="Ant3">Ant3</string>
    <string name="Ant4">Ant4</string>
    <string name="totalCount">TotalCount</string>
    <string name="selectAll">Select All</string>
    <string name="single">Single</string>
    <string name="loop">Inventory</string>
    <string name="c">6C</string>
    <string name="b">6B</string>
    <string name="gb">GB</string>
    <string name="destroyPas">DestroyPassWord(Hex):</string>
    <string name="lock">Lock</string>
    <string name="lock_query">LockQuery</string>
    <string name="destroy">Destroy</string>
    <string name="readOrWrite">Read and Write tag</string>
    <string name="rfid">RfidConfig</string>
    <string name="deviceInfo">DeviceInfo</string>
    <string name="upgradeBase">Update baseband</string>
    <string name="device">DeviceConfig</string>
    <string name="wifi">WIFI</string>
    <string name="gpio">GPIO</string>
    <string name="UpgradeBaseband">UpgradeBaseBand </string>
    <string name="UpgradeApp">UpgradeApp</string>
    <string name="reload">restart</string>
    <string name="recoverDefault">FactoryReset</string>
    <string name="cusCommand">CustomCommand</string>
    <string name="searchDevice">DeviceInformation</string>
    <string name="gpi_in_out">GPI_InOut</string>
    <string name="deviceSearch">DeviceSearch</string>
    <string name="wifiConfig">WifiConfig</string>
    <string name="EasConfig">EASCustomization </string>
    <string name="frequencyHopping">FrequencyHopping</string>
    <string name="connect">ManualConnection</string>
    <string name="connect_type">Type:</string>
    <string name="deviceConnect">Connection</string>
    <string name="tcp_server">TcpServer</string>
    <string name="tcp_server_str1">1. After configuring the device into client mode, the device will automatically connect to the remote host.</string>
    <string name="tcp_server_str2">2. When listening, close this window without stopping port listening.</string>
    <string name="start_listener">Start</string>
    <string name="stop_listener">Stop</string>
    <string name="native_port">LocalListeningPort:</string>
    <string name="disConnect">Disconnect</string>
    <string name="tcp_param">Param:</string>
    <string name="lockArea">LockArea:</string>
    <string name="lockAddress">LockTheAddress:</string>
    <string name="operaType">OperationType:</string>
    <string name="ant1">ANT1</string>
    <string name="ant2">ANT2</string>
    <string name="ant3">ANT3</string>
    <string name="ant4">ANT4</string>
    <string name="ant5">ANT5</string>
    <string name="ant6">ANT6</string>
    <string name="ant7">ANT7</string>
    <string name="ant8">ANT8</string>
    <string name="ant9">ANT9</string>
    <string name="ant10">ANT10</string>
    <string name="ant11">ANT11</string>
    <string name="ant12">ANT12</string>
    <string name="ant13">ANT13</string>
    <string name="ant14">ANT14</string>
    <string name="ant15">ANT15</string>
    <string name="ant16">ANT16</string>
    <string name="bWrite">6B Tag Write UserData</string>
    <string name="bTid">TID:</string>
    <string name="bStart">StartAddress(byte):</string>
    <string name="bValue">WriteValue:</string>
    <string name="cWrite">6C Tag Write UserData</string>
    <string name="cEpc">EPC:</string>
    <string name="cPass">AccessPassword:</string>
    <string name="cTid">TID:</string>
    <string name="cStart">StartAddress:</string>
    <string name="cValue">WriteValue:</string>
    <string name="cCus">6C Tag Custom Operation</string>
    <string name="upgradeTitle">Baseband upgrade</string>
    <string name="upgradeAppTitle">DeviceApp upgrade</string>
    <string name="matchingParam">MatchingParameter:</string>
    <string name="cusStart">Start(bit):</string>
    <string name="cusPas">AccessPassword:</string>
    <string name="cusContent">MatchContent(Hex):</string>
    <string name="cusEpc">EPC:</string>
    <string name="cusTid">TID:</string>
    <string name="cusUser">UserData:</string>
    <string name="writeEpc">6C Tag WriteEPC</string>
    <string name="writegbEpc">GB Tag WriteEPC</string>
    <string name="deviceIntSearch">Network device search</string>
    <string name="wEpc">EPC:</string>
    <string name="wPas">AccessPassword:</string>
    <string name="wTid">TID:</string>
    <string name="wLen">Length:</string>
    <string name="wValue">WriteValue:</string>
    <string name="cus_w_area">WriteArea:</string>
    <string name="cus_w_start">StartAddress(word):</string>
    <string name="cus_w_content">WriteContent(Hex):</string>
    <string name="cus_w_blockNum">BlockNumber:</string>
    <string name="cus_w_block">BlockWrite</string>
    <string name="cus_write">writeIn</string>
    <string name="query">Query</string>
    <string name="config">Set</string>
    <string name="auto_time">FreeTime:</string>
    <string name="auto_time_unit">×10ms</string>
    <string name="ant_frequency">AntennaPower </string>
    <string name="up_param">UploadParameters</string>
    <string name="filter_time">FiltrationTime :</string>
    <string name="RSSI">RSSI:</string>
    <string name="baud">BaudRate:</string>
    <string name="serialParam">SerialPort</string>
    <string name="readerTime">ReaderTime</string>
    <string name="rs485Param">RS485Parameter</string>
    <string name="macConfig">MacConfig</string>
    <string name="deviceMac">DeviceMac</string>
    <string name="server_client">Server/Client</string>
    <string name="belowIp">Static IP</string>
    <string name="autoIp">Auto IP</string>
    <string name="ser_cliServer">Server</string>
    <string name="ser_cliClient">Client</string>
    <string name="network_mask">SubnetMask:</string>
    <string name="gateway">DefaultGateway :</string>
    <string name="first_dns">FirstDNS:</string>
    <string name="second_dns">StandbyDNS:</string>
    <string name="networkParam">EthernetParameters</string>
    <string name="gpoConfig">GPO Config</string>
    <string name="freHopp">FrequencyHopping</string>
    <string name="gpiState">GPI State</string>
    <string name="gpiLogo">GPI Report to the log</string>
    <string name="trigger_start">TriggeringCondition:</string>
    <string name="trigger_command">TriggerInstructions:</string>
    <string name="trigger_stop">SuspensiveCondition:</string>
    <string name="delayTime">DelayTime:</string>
    <string name="upSwitch">UploadSwitch</string>
    <string name="gpiActionConfig">GPI ActionConfig</string>
    <string name="beepSet">Buzzer Control</string>
    <string name="wiegand">Wiggins Config</string>
    <string name="wfswitch">WIFI Switch</string>
    <string name="wfparam">WIFI Parameter</string>
    <string name="wfflush">Flush Hotspot</string>
    <string name="wfconfig">Config Hotspot</string>
    <string name="hotList">Hotspot List</string>
    <string name="essid">ESSID</string>
    <string name="bssid">BSSID</string>
    <string name="wf_rssi">RSSI</string>
    <string name="protocol">Protocol - encryption</string>
    <string name="state">State</string>
    <string name="state_code">StatusCode </string>
    <string name="network_id">NetworkId</string>
    <string name="wifi_con">Wifi Hotspot connection</string>
    <string name="wifi_essid">ESSID:</string>
    <string name="safe_type">Security type:</string>
    <string name="encryption_type">Encryption type:</string>
    <string name="wifi_pas">Password:</string>
    <string name="ipAddress">Ip Address:</string>
    <string name="baseSpeed">Baseband rate:</string>
    <string name="session">Session:</string>
    <string name="qValue">QValue:</string>
    <string name="inventory">Inventory means:</string>
    <string name="epc_base_param">EPC base band parameters</string>
    <string name="work_frequency">Frequency range</string>
    <string name="auto_free">Automatic idle</string>
    <string name="being_loading">Loading.....Please check manually</string>
    <string name="eas_suc_action">EAS Match successful action</string>
    <string name="eas_fail_action">EAS Failed match action</string>
    <string name="select_type">Read area:</string>
    <string name="select_ant">Antenna selection:</string>
    <string name="select_tid">TID</string>
    <string name="select_user">UserData</string>
    <string name="select_reserve">Reserved</string>
    <string name="select_ant1">Ant1</string>
    <string name="select_ant2">Ant2</string>
    <string name="select_ant3">Ant3</string>
    <string name="select_ant4">Ant4</string>
    <string name="select_ant5">Ant5</string>
    <string name="select_ant6">Ant6</string>
    <string name="select_ant7">Ant7</string>
    <string name="select_ant8">Ant8</string>
    <string name="select_ant9">Ant9</string>
    <string name="select_ant10">Ant10</string>
    <string name="select_ant11">Ant11</string>
    <string name="select_ant12">Ant12</string>
    <string name="select_ant13">Ant13</string>
    <string name="select_ant14">Ant14</string>
    <string name="select_ant15">Ant15</string>
    <string name="select_ant16">Ant16</string>
    <string name="debug_view">MsgLog</string>
    <string name="startSearch">Start</string>
    <string name="stopSearch">Stop</string>
    <string name="cleanSearch">Clear</string>
    <string name="cancelSelectAll">Deselect all</string>
    <string name="upgrade">Upgrade</string>
    <string name="affirm">Affirm</string>
    <string name="cancel">Cancel</string>
    <string name="eas_config">EASConfig</string>
    <string name="eas_switch">Switch:</string>
    <string name="matching_area">Matching area:</string>
    <string name="Start_address">Start byte address:</string>
    <string name="Match_content">Match the content(hex):</string>
    <string name="eas_mask">Mask(hex):</string>
    <string name="action_keep_time">Action holding time(s):</string>
    <string name="work_frequencyRange">Working frequency range:</string>
    <string name="select_fre_list">List of selected frequencies:</string>
    <string name="please_left_select">Please choose from the left</string>
    <string name="write_epc_empty">Write the EPC value cannot be empty</string>
    <string name="no_automatic">automatic calculation</string>
    <string name="cus_read_title">Custom read EPC tags</string>
    <string name="cus_read_tid_mode">Mode:</string>
    <string name="cus_read_tid_len">Length(word):</string>
    <string name="cus_read_user_start">Start(word):</string>
    <string name="cus_filter_start">Start(bit):</string>
    <string name="cus_read_reserve">Reserve:</string>
    <string name="cus_read_other">Access password/others:</string>
    <string name="cus_read_pas">Access password</string>
    <string name="cus_read_tid">Read TID</string>
    <string name="cus_read_userData">Read User</string>
    <string name="cus_read_reserved">Read Reserve</string>
    <string name="filter_6b_tid">ToMatchTID:</string>
    <string name="read_6b_content">ReadContent:</string>
    <string name="read_6b_start">UserStart(byte):</string>
    <string name="read_6b_len">UserLen(byte):</string>
    <string name="cus_read_6b_title">Custom read 6b Tags</string>
    <string name="cus_gb_start">Start(word):</string>
</resources>