<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cus_linear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_15">

    <TextView
        android:id="@+id/cus_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cus_read_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matchingParam"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/cus_read_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/cus_mode"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cus_filter_start"
            android:textSize="@dimen/text_size_18" />

        <EditText
            android:id="@+id/cus_read_start"
            android:layout_width="@dimen/layout_width_100"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/text_size_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cusContent"
            android:textSize="@dimen/text_size_18" />

        <EditText
            android:id="@+id/cus_read_match_content"
            android:layout_width="@dimen/layout_width_360"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cusTid"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_tid_mode"
                    android:textSize="@dimen/text_size_18" />

                <Spinner
                    android:id="@+id/cus_read_tid_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/tid_read_mode"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_tid_len"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_tid_len"
                    android:layout_width="@dimen/layout_width_70"
                    android:layout_height="wrap_content"
                    android:text="6"
                    android:textSize="@dimen/text_size_18" />

                <CheckBox
                    android:id="@+id/read_tid_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_tid"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cusUser"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_user_start"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_user_start"
                    android:layout_width="@dimen/layout_width_70"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="@dimen/text_size_18" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_tid_len"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_user_len"
                    android:layout_width="@dimen/layout_width_70"
                    android:layout_height="wrap_content"
                    android:text="6"
                    android:textSize="@dimen/text_size_18" />

                <CheckBox
                    android:id="@+id/read_user_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_userData"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cus_read_reserve"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_user_start"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_reserve_start"
                    android:layout_width="@dimen/layout_width_70"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_tid_len"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_reserve_len"
                    android:layout_width="@dimen/layout_width_70"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:textSize="@dimen/text_size_18" />

                <CheckBox
                    android:id="@+id/read_reserve_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_reserved"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cus_read_other"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/read_other_pas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_read_pas"
                    android:textSize="@dimen/text_size_18" />

                <EditText
                    android:id="@+id/cus_read_pas"
                    android:layout_width="@dimen/layout_width_200"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
