<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_15">

    <TextView
        android:id="@+id/cus_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cus_read_6b_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_26" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_6b_tid"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/cus_read_filter_6b_tid"
            android:layout_width="@dimen/layout_width_300"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_6b_content"
            android:textSize="@dimen/text_size_20" />

        <Spinner
            android:id="@+id/cus_read_6b_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/read_6b_content"
            android:textSize="@dimen/text_size_20"
            android:theme="@style/itemSpinnerStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_6b_start"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/cus_read_6b_start"
            android:layout_width="@dimen/layout_width_200"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/text_size_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_6b_len"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/cus_read_6b_len"
            android:layout_width="@dimen/layout_width_200"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="@dimen/text_size_20" />

    </LinearLayout>

</LinearLayout>
